# Artifact-Engine

./: .gitattributes  .gitignore  INSTALL.bat  LICENSE  README.md  UNINSTALL.bat  aeng.cmd  pyproject.toml
docs/: ARCHITECTURE.md  CUSTOM_DETECTIONS.md  LATERAL_MOVEMENT.md  WEB_METRICS.md
src/artifact_engine/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  models.py  registry.py
src/artifact_engine/core/: consolidate.py  detector.py  downloader.py  extractor.py  hashing.py  lateral.py  procs.py  progress.py  report.py  runner.py  scheduler.py  sigma_engine.py
src/artifact_engine/data/assets/: lolbas.yaml  loldrivers_hashes.json  rmm_tools.yaml  suspicious_tools.txt  web_suspicious.txt  world_map.json
src/artifact_engine/data/profiles/: fortigate.yaml  linux_uac.yaml  weblogs.yaml  windows_kape.yaml
src/artifact_engine/data/sigma/: VERSION
src/artifact_engine/handlers/: __init__.py  _indicators.py  _lincommon.py  _web_report.py  _webcommon.py  _webrules.py  lin_anomalies.py  lin_auditd_config.py  lin_auth.py  lin_bash.py  lin_bodyfile.py  lin_btmp.py  lin_cron.py  lin_cron_log.py  lin_ebpf.py  lin_fortigate.py  lin_gtfobins.py  lin_hashes.py  lin_huntweb.py  lin_kernel.py  lin_known_hosts.py  lin_log_integrity.py  lin_logins.py  lin_machineinfo.py  lin_mdatp.py  lin_netconfig.py  lin_network.py  lin_packages.py  lin_persistence.py  lin_pkg_history.py  lin_proc_anomalies.py  lin_processes.py  lin_services.py  lin_sessions.py  lin_sigma.py  lin_ssh.py  lin_sudo.py  lin_suid.py  lin_users.py  lin_web_access.py  (+27 more)
(+104 files in other folders)
