[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-engine"
version = "0.2.0"
description = "Modular DFIR triage engine: decompress acquisitions (KAPE/UAC) and parse forensic artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }   # PolyForm-Noncommercial-1.0.0 (source-available; not OSI open-source)
authors = [{ name = "Marc Bernaldo", email = "marcbt96@gmail.com" }]
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "requests>=2.28",
    "pandas>=2.0",
    "XlsxWriter>=3.1",
    "python-registry>=1.3",
    "pysigma>=0.11",
    "pysigma-backend-sqlite>=0.1.1",
    "maxminddb>=2.2",
    "yara-python>=4.3",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
artifact-engine = "artifact_engine.cli:main"
aeng = "artifact_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
artifact_engine = ["data/**/*.yaml", "data/**/*.yml", "data/**/*.txt", "data/**/*.reb", "data/**/*.json", "data/**/*.yar", "data/sigma/VERSION"]

[tool.ruff]
line-length = 110
target-version = "py310"
